# mirror-leech-telegram-bot

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES_GUIDE.md  CODESCENE_ANALYSIS_REPORT.md  CODESCENE_QUICK_GUIDE.md  CODE_IMPROVEMENTS_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.txt  Dockerfile  ENHANCEMENT_SUMMARY.md  GIT_COMMANDS.md  HEALTH_CHECK_GUIDE.md  IMPLEMENTATION_2026.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  MERGE_SUMMARY.md  MIGRATION_GUIDE.md  NEW_FEATURES_GUIDE.md  OPTION_1_COMPLETE.md  PHASE1_COMPLETION_SUMMARY.txt  PHASE2_COMPLETION_SUMMARY.txt  PHASE2_VERIFICATION.md  PHASE_1_COMPLETE.md  PHASE_2_FEATURES.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHASE_3_FEATURES.md  PHASE_3_IMPLEMENTATION_GUIDE.md  PHASE_4_FEATURES.md  PHASE_4_IMPLEMENTATION_GUIDE.md  PHASE_5_FEATURES.md  PHASE_5_IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  QUICK_REFERENCE_2026.md  QUICK_START.md  (+31 more)
.codescene/: README.md  config.yml
.github/: dependabot.yml
.metrics/: alert_rules.yml  prometheus.yml
bot/: __init__.py  __main__.py
config/: .env.production  .env.security.example  config_enhancements_phase5.py  main_config.py  requirements.txt
docs/: 00_PROJECT_CLEANUP_FINAL_REPORT.md  01_WORKSPACE_STRUCTURE.md  API.md  API_REFERENCE.md  AUTOMATION_FEATURES.md  CONFIGURATION.md  DEPLOYMENT_CHECKLIST.md  ENHANCED_EXAMPLES.md  ENHANCED_FEATURES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION.md  PHASE1_QUALITY_GATES.md  PHASE2_OBSERVABILITY.md  PHASE3_SECURITY_HARDENING.md  QUICK_REFERENCE.md  TIER3_PHASE_5_FEATURES.md  TIER3_PHASE_5_IMPLEMENTATION_GUIDE.md  TIER3_PHASE_5_IMPLEMENTATION_PRIORITY.md  TIER3_PHASE_5_QUICK_CHECKLIST.md  TIER3_PHASE_5_QUICK_REFERENCE.md
monitoring/: prometheus.yml
sabnzbd/: SABnzbd.ini
scripts/: analyze_tech_debt.py  backup.sh  backup_restore.sh  codescene_analyze.sh  create_db_indexes.sh  db_security_setup.sh  deploy_bot.sh  dev_setup.sh  enable_phase4_optimizations.py  health_check.sh  health_check_comprehensive.sh  measure_performance_baseline.py  mongodb-init.js  pre_commit_test.sh  pre_deployment_checklist.sh  production_hardening.py  quick_health_check.sh  secrets.sh  security_hardening.sh  security_setup.py  setup_performance_baseline.sh  test_operational_procedures.sh  test_phase3_integration.py  test_phase3_security.py  test_phase3_systems.sh  test_phase4_performance.py  test_phase5_advanced_features.py  verify_config.py
tests/: conftest.py  test_api_endpoints.py  test_api_gateway.py  test_cluster_manager.py  test_distributed_state_manager.py  test_enhanced_startup_phase5.py  test_failover_manager.py  test_health_monitor.py  test_integration.py  test_load_performance.py  test_metrics.py  test_performance_optimizer.py  test_phase2_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_phase5_integration.py  test_phase5_performance_benchmark.py  test_redis_manager.py  test_replication_manager.py  (+1 more)
(+246 files in other folders)
